[package]
name = "kiwad_unpacker"
authors = ["Phill030"]
version = "0.1.1"
edition = "2021"

[dependencies]
binary_modifier = "0.3.3"
ctrlc = "3.4.4"
flate2 = "1.0.28"
rayon = "1.10.0"
thiserror = "1.0.59"

# [dev-dependencies]
# criterion = "0.5.1"

# [[bench]]
# name = "unpacker_benchmark"
# harness = false
